Fix swagger files
