# docs/swagger.json
@@ -162,7 +162,7 @@
                 }
             }
         },
-        "/api/userInfo": {
+        "/api/userInfo/": {
             "post": {
                 "description": "Получение информации о добавлении и удалении пользователя в сегменты во временном промежутке",
                 "consumes": [
@@ -221,7 +221,7 @@
                 }
             }
         },
-        "/api/users": {
+        "/api/users/": {
             "post": {
                 "description": "Добавление и удаление пользователя в указанные сегменты",
                 "consumes": [
